--- a/Login Page/style.css
+++ b/Login Page/style.css
@@ -62,10 +62,17 @@ body {
   border: none;
   border-radius: 3px;
 }
-input::-webkit-input-placeholder {
-  font-weight:500;
-  color:#AFB2B3;
-}
+#passwordfield:hover{
+  background-color: #bebebe ;
+  }
+  input::-webkit-input-placeholder {
+    font-weight:500;
+    color:#AFB2B3;
+  }
+input:focus::placeholder{
+    color: #ffffff;
+  }
+
 #login-button {
   margin-top: 10px;
   width: 300px;
@@ -74,6 +81,9 @@ input::-webkit-input-placeholder {
   border: none;
   border-radius: 10px;
   font-size: 17px;
+}
+#login-button:hover{
+  background-color: #385b03;
 }
 /* information about the application */
 #information {
@@ -101,4 +111,7 @@ input::-webkit-input-placeholder {
 #beside{
   display: flex;
   gap:5px;
+  margin-top: 180px;
+  margin-left: 30px;
 }
+
